[gd_scene load_steps=28 format=3 uid="uid://nfef58j0niyi"]

[ext_resource type="Script" path="res://Enemies/bat.gd" id="1_bfng1"]
[ext_resource type="Texture2D" uid="uid://dyeq1cinj2k18" path="res://Enemies/Bat.png" id="1_qyub5"]
[ext_resource type="Texture2D" uid="uid://bxnrvyathwb3p" path="res://Shadows/SmallShadow.png" id="2_wy82h"]
[ext_resource type="PackedScene" uid="uid://p7qcn13ya0rr" path="res://Boxes and Collisions/hurtbox.tscn" id="3_i08yu"]
[ext_resource type="Texture2D" uid="uid://cfgi07ixfv0mt" path="res://Enemies/IceBat.png" id="3_v4ryf"]
[ext_resource type="PackedScene" uid="uid://dbdks3ebaihox" path="res://stats.tscn" id="5_xn3pd"]
[ext_resource type="PackedScene" uid="uid://cvjtku0sor2a" path="res://Enemies/player_detection_zone.tscn" id="6_okp4h"]
[ext_resource type="PackedScene" uid="uid://5e1srmlcswn5" path="res://Boxes and Collisions/hitbox.tscn" id="7_3bw4x"]
[ext_resource type="PackedScene" uid="uid://b63fp8r00q2ce" path="res://Boxes and Collisions/soft_collision.tscn" id="8_rb0ys"]
[ext_resource type="PackedScene" uid="uid://bbaen8mb6ap65" path="res://Enemies/wander_controller.tscn" id="9_xsnq2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nx5du"]
atlas = ExtResource("1_qyub5")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpm8p"]
atlas = ExtResource("1_qyub5")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_udcuf"]
atlas = ExtResource("1_qyub5")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpga1"]
atlas = ExtResource("1_qyub5")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc3av"]
atlas = ExtResource("1_qyub5")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rb05d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx5du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpm8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udcuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpga1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc3av")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lt072"]
atlas = ExtResource("3_v4ryf")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q374p"]
atlas = ExtResource("3_v4ryf")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2hpt"]
atlas = ExtResource("3_v4ryf")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o25vg"]
atlas = ExtResource("3_v4ryf")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxrqk"]
atlas = ExtResource("3_v4ryf")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_0sykt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt072")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q374p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2hpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o25vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxrqk")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yp57x"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fnt4e"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qg1mb"]
radius = 87.0057

[sub_resource type="CircleShape2D" id="CircleShape2D_bjsnr"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3rb77"]
radius = 6.0

[node name="Bat" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_bfng1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rb05d")
animation = &"Fly"
autoplay = "Fly"
offset = Vector2(2.08165e-12, -12)

[node name="AnimatedSprite2DIce" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0sykt")
animation = &"Fly"
autoplay = "Fly"
offset = Vector2(2.08165e-12, -12)

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("2_wy82h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yp57x")

[node name="Hurtbox" parent="." instance=ExtResource("3_i08yu")]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_fnt4e")

[node name="Stats" parent="." instance=ExtResource("5_xn3pd")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_okp4h")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_qg1mb")
debug_color = Color(0, 0.6, 0.701961, 0.243137)

[node name="Hitbox" parent="." instance=ExtResource("7_3bw4x")]
position = Vector2(0, -17)
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_bjsnr")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="SoftCollision" parent="." instance=ExtResource("8_rb0ys")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_3rb77")

[node name="WanderController" parent="." instance=ExtResource("9_xsnq2")]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
